Release: 0.61
      . Fixes to the pod and a new IWL::Manual::Tutorial pod
      . Objects can unrequire resources (IWL::Object::unrequire)
      . Registering an event will automatically require the needed js files
      . IWL::RPC improvements

Release: 0.60 - 03.06.08
      . A logo and a move to github
      . Proper documentation of the event system
        * Generic events, derived from signals, will receive the serialized Event object.
      . Rewrite of the NavBar (API Break!)
      . The entry is internally represented as a table
      . Combo can have empty options
      . New IWL::Google::Map widget
      . New IWL::Canvas widget
      . New IWL::ProgressBar widget
      . New selection API for IWL::Objects
      . New Drag & Drop API for IWL::Widgets, via IWL::DND
      . Rewrite of the shared resource management
        * No more global hash for storing shared resources
        * Addition of a 'requiredCSS' method
        * New IWL::Environment pseudo-root object, for mixing IWL::Objects with html snippets
        * Javascript files are placed at the last possible moment
        * CSS files are placed as early as possible
        * 'iwl:independant' attribute for scripts, if they don't require any shared resources
        * Multiple shared resources are obtained in one request, if a 'STATIC_URI_SCRIPT' is in use
      . Javascript:
        * document.insertScript is now part of 'base.js', requires IWL
	* Event.emitSignal can emit regular HTML events, such as 'change' or 'keydown'.
	    Options for these events (like 'bubbles', or 'ctrlKey') can be added to the
	    created event, by instantiating a new 'Event.Options' object, with the options
	    hash as the parameter of the constructor, and passing it as the last argument
	    of the emitSignal method.
      . IWL::Contentbox supports both resize and drag outline mode
      . Various internal changes

Release: 0.52 - 22.11.07