@@ -184,12 +184,14 @@ IWL.Button = Object.extend(Object.extend({}, IWL.Widget), (function () {
             if (disabled) {
                 this._disabled = true;
                 this.addClassName(className + '_disabled ' + className + '_' + this.options.size + '_disabled');
+                this.down('button').disabled = true;
                 createDisabledLayer.call(this);
                 disableButton.call(this);
                 return this;
             } else {
                 this._disabled = false;
                 this.removeClassName(className + '_disabled ' + className + '_' + this.options.size + '_disabled');
+                this.down('button').disabled = false;
                 removeDisabledLayer.call(this);
                 return this;
             }
